--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "country-state-city": "^3.1.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "formik": "^2.4.2",
     "next": "13.4.0",
     "postcss": "8.4.23",
+    "razorpay": "^2.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
