--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.4.3",
     "formik": "^2.4.2",
     "next": "13.4.0",
+    "next13-progressbar": "^1.0.2",
     "postcss": "8.4.23",
     "razorpay": "^2.9.1",
     "react": "18.2.0",
