--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 # google recaptcha site key
 NEXT_PUBLIC_CAPTCHA_SITE_KEY = 6LfJ5IwnAAAAALdI0I3yOxeXy-up_icrBt13eH2y
 NEXT_PUBLIC_CAPTCHA_SECRET_KEY = 6LfJ5IwnAAAAAER_E3z75Q6ewm0InVwUsHJMPC9t
+
+# firebase 
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBzfByvl7moim9PFUjUNPEMoVmatwW7yw0
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=lensys-8429c.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=lensys-8429c
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=lensys-8429c.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=99530805743
+NEXT_PUBLIC_FIREBASE_APP_ID=1:99530805743:web:cb6c0fe88a5094522ea61a
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-MB0JLGGS2J
