--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "country-state-city": "^3.1.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "firebase": "^10.3.1",
     "formik": "^2.4.2",
     "next": "13.4.0",
     "next13-progressbar": "^1.0.2",
