--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js ${{ matrix.node-version }}
+    - name: Set up Node.js 20
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20'
 
     - name: Install dependencies
       run: npm install
