--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,3 +25,6 @@ jobs:
 
     - name: Build
       run: npm run build
+
+    - name: Start application with PM2
+    run: pm2 start npm --name "lensys"
