--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,8 @@ jobs:
     - name: Build
       run: npm run build
 
+    - name: Print PATH
+      run: echo $PATH
+
     - name: Start application with PM2
-      run: pm2 start npm --name "lensys"
+      run: npx pm2 start npm --name "lensys"
