--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,9 @@ jobs:
 
     - name: Print PATH
       run: echo $PATH
+    
+    - name: PM2 Delete 
+      run: npx pm2 delete *
 
     - name: Start application with PM2
-      run: npx pm2 start npm --name "lensys"
+      run: npx pm2 start npm --name=lensys -- start
