--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       run: echo $PATH
     
     - name: PM2 Delete 
-      run: npx pm2 delete *
+      run: npx pm2 delete all
 
     - name: Start application with PM2
       run: npx pm2 start npm --name=lensys -- start
