--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "@next/third-parties": "^14.1.3",
     "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.0.1",
     "@mui/icons-material": "^5.11.16",
